--- a/sberhunters-2/assets/css/styles.css
+++ b/sberhunters-2/assets/css/styles.css
@@ -984,7 +984,7 @@
 {
     font-weight: 600; 
 
-    color: #319c42;
+    color: #006838;
 }
 
 .how__image img
@@ -1098,7 +1098,7 @@
 {
     font-weight: 600; 
 
-    color: #319c42;
+    color: #006838;
 }
 
 .section--video .action
